# libgit2-el

./: .gitignore  CMakeLists.txt  Cask  Makefile  Makefile.readme  README.in.rst  README.rst  libgit.el  libgit2-pkg.el  libgit2.el  symbols.cfg  test.el
src/: CMakeLists.txt  egit-blame.c  egit-checkout.c  egit-cherrypick.c  egit-commit.c  egit-config.c  egit-describe.c  egit-diff.c  egit-merge.c  egit-options.c  egit-pathspec.c  egit-remote.c  egit-revert.c  egit-status.c  egit-submodule.c  egit-tree.c  egit-treebuilder.c  egit.c  interface.h  main.c  symbols.c
test/: annotated-commit-test.el  blame-test.el  blob-test.el  branch-test.el  checkout-test.el  cherrypick-test.el  commit-test.el  config-test.el  describe-test.el  diff-test.el  graph-test.el  ignore-test.el  index-test.el  merge-test.el  message-test.el  pathspec-test.el  refcount-test.el  reference-test.el  reflog-test.el  remote-test.el  repository-test.el  reset-test.el  revert-test.el  revparse-test.el  revwalk-test.el  signature-test.el  status-test.el  submodule-test.el  tag-test.el  test-helper.el  tree-test.el  treebuilder-test.el
